<resources>
    <string name="app_name">2local</string>
    <string name="navigation_home_title">Home</string>
    <string name="navigation_scan_title">Scan</string>
    <string name="navigation_market_title">Market</string>
    <string name="navigation_wallet_title">Wallet</string>
    <string name="bottom_van_menu_home">Home</string>
    <string name="bottom_van_menu_marketplace">MarketPlace</string>
    <string name="bottom_van_menu_scan">Scan</string>
    <string name="bottom_van_menu_wallet">Wallet</string>
    <string name="biometric_login_login">Biometric login for 2local app</string>
    <string name="biometric_login_using_biometric_credential">Log in using your biometric credential</string>
    <string name="biometric_login_cancel">cancel</string>
    <string name="error_msg_no_biometric_hardware">No biometric features available on this device.</string>
    <string name="error_msg_biometric_hw_unavailable">Biometric features are currently unavailable.</string>
    <string name="error_msg_biometric_not_setup">The user hasn\'t associated any biometric credentials with their account.</string>
    <string name="market_place_phone">"tel:+31252518537"</string>
    <string name="slide_one_head_title">Worldwide Sustainability and Prosperity</string>
    <string name="slide_one_description_content">Our Vision is an unity of happy bright people and a sustainable world with prosperity for all</string>
    <string name="slide_two_head_title">Send, Receive and Pay with 2local token</string>
    <string name="slide_two_description_content">Powered by a secure blockchain 2.0 wallet</string>
    <string name="slide_three_head_title">Cashback on Local Purchases</string>
    <string name="slide_three_description_content">Cashback by buying locally and sustainably to support the community</string>
    <string name="fragment_login_title">Login</string>
    <string name="fragment_login_btn_login">Login</string>
    <string name="fragment_login_edt_email">Email</string>
    <string name="fragment_login_password">Password</string>
    <string name="fragment_login_touch_the_fingerprint_sensor_to_login">Touch the fingerprint sensor to login</string>
    <string name="fragment_login_fingerprint">FingerPrint</string>
    <string name="fragment_login_create_an_account">Create an account</string>
    <string name="fragment_login_didn_t_signup_yet_question">Didn\'t signup yet?</string>
    <string name="fragment_login_using_email_password">Please login using email and password</string>
    <string name="fragment_create_password_create_password">Create password</string>
    <string name="fragment_create_password_this_password_will_unlock">This password will unlock your 2local wallet only on this device.</string>
    <string name="fragment_create_password_password">Password</string>
    <string name="fragment_create_password_confirm_password">Confirm password</string>
    <string name="fragment_create_password_must_be_at_least">Must be at least 8 character</string>
    <string name="fragment_create_password_sign_in_touch_id">Sign in with touch ID</string>
    <string name="fragment_create_password_btn_create_password">Create password</string>
    <string name="fragment_change_local_password_title">Change local password</string>
    <string name="fragment_change_local_password_change_your_local_password">Change your local password only on this device.</string>
    <string name="fragment_change_local_password_current_password">Current password</string>
    <string name="fragment_change_local_password_new_password">New password</string>
    <string name="fragment_change_local_password_confirm_password">Confirm password</string>
    <string name="fragment_change_local_password_btn_change_password">Change password</string>
    <string name="fragment_change_local_password_current_pass_incorrect_error">Incorrect password</string>
    <string name="fragment_change_local_password_change_successful">Your password changed</string>
    <string name="fragment_unlock_app_welcome">Welcome back</string>
    <string name="fragment_unlock_app_log_in_with_touch_id">Log in with touch ID</string>
    <string name="fragment_unlock_app_login">Log in</string>
    <string name="fragment_unlock_app_forget_password">Can\'t login? You can reset your current wallet and setup a new one</string>
    <string name="fragment_unlock_app_btn_reset">Reset Wallet</string>
    <string name="fragment_unlock_app_alert_reset_wallet">Reset Wallet</string>
    <string name="fragment_unlock_app_alert_reset_wallet_content">If you reset wallet, you have to import all wallet again using recovery phrase.</string>
    <string name="fragment_unlock_app_alert_reset_submit">Reset</string>
    <string name="fragment_unlock_app_alert_reset_cancel">Cancel</string>
    <string name="fragment_unlock_app_alert_reset_alert">Warning</string>
    <string name="fragment_unlock_app_alert_reset_wallet_confirm">Are sure to reset wallet?</string>
    <string name="splash_connection_failed_tap_to_try_again">Connection failed! tap to try again</string>
    <string name="splash_try_again">Try Again</string>
    <string name="splash_there_is_server_side_problem">There is some issues on the serve side, will be back soon</string>
    <string name="activity_receive_token_your_address">Your Address</string>
    <string name="activity_receive_token_copy">Copy</string>
    <string name="activity_receive_token_amount">Amount</string>
    <string name="activity_receive_token_request_specific_amount">Request Specific Amount</string>
    <string name="activity_transaction_history_last_week_overview">Last week 2LC overview</string>
    <string name="activity_transaction_history_latest_transactions">All Wallets Transactions</string>
    <string name="activity_transaction_history_oops_no_transactions_yet">Oops, no transactions yet!</string>
    <string name="activity_transaction_history_send">send</string>
    <string name="activity_transaction_history_receive">receive</string>
    <string name="activity_wallet_detail_send">Send</string>
    <string name="activity_wallet_detail_receive">Receive</string>
    <string name="activity_wallet_detail_latest_transactions">All Wallet Transactions</string>
    <string name="activity_wallet_detail_buy">Buy</string>
    <string name="activity_wallet_detail_copy">Copy</string>
    <string name="activity_wallet_detail_oops_no_transactions_yet">Oops, no transactions yet!</string>
    <string name="bottom_sheet_remove_wallet_title">Remove wallet</string>
    <string name="bottom_sheet_remove_btn_submit">Remove wallet</string>
    <string name="bottom_sheet_remove_btn_cancel">Cancel</string>
    <string name="bottom_sheet_remove_wallet_are_you_sure_about_removing">Are you sure about removing your wallet? If you don\'t have access or lost your recovery phrase your wallet can\'t be recovered.</string>
    <string name="bottom_sheet_remove_wallet">Wallet Remove successfully</string>
    <string name="bottom_sheet_remove_wallet_question">Remove Wallet?</string>
    <string name="bottom_sheet_remove_wallet_please_write_recovery">Please write recovery phrase, otherwise you will lose your wallet.</string>
    <string name="bottom_sheet_rename_wallet_updated">Wallet Name Update successfully</string>
    <string name="bottom_sheet_rename_wallet_wallet_name">Wallet name</string>
    <string name="bottom_sheet_rename_wallet_confirm">Confirm</string>
    <string name="bottom_sheet_rename_wallet_cancel">Cancel</string>
    <string name="bottom_sheet_transaction_detail_copy">Copy</string>
    <string name="dialog_receive_token_your_address">Your Address</string>
    <string name="dialog_receive_token_amount">Amount</string>
    <string name="dialog_receive_token_share">Share</string>
    <string name="fragment_about_title">About 2local</string>
    <string name="fragment_about_version">Version</string>
    <string name="fragment_about_privacy_policy">Privacy policy</string>
    <string name="fragment_about_team_of_use">Terms and Conditions</string>
    <string name="fragment_about_give_us_feedback">Give us feedback</string>
    <string name="fragment_about_version_prefix">v %s</string>
    <string name="fragment_account_info_account_info">Account Info</string>
    <string name="fragment_account_info_first_name">First Name</string>
    <string name="fragment_account_info_last_name">Last Name</string>
    <string name="fragment_account_info_birthday">Birthday</string>
    <string name="fragment_account_info_country">Country</string>
    <string name="fragment_account_info_state">State</string>
    <string name="fragment_account_info_city">City</string>
    <string name="fragment_account_info_address">Address</string>
    <string name="fragment_account_info_postal_code">Postal Code</string>
    <string name="fragment_account_info_username_required">Username (Required)</string>
    <string name="fragment_account_info_phone_required">Phone (Required)</string>
    <string name="fragment_account_info_save_changes">Save Changes</string>
    <string name="fragment_add_contact_wallet_address">Wallet Address</string>
    <string name="fragment_add_contact_paste">Paste</string>
    <string name="fragment_add_contact_save">Save</string>
    <string name="fragment_add_contact_currency">Currency</string>
    <string name="fragment_setting_currency">Currency</string>
    <string name="fragment_add_contact_title">Add Contact</string>
    <string name="fragment_add_contact_name">Name</string>
    <string name="fragment_affiliate_title">Affiliate</string>
    <string name="fragment_affiliate_referral_link">Referral link</string>
    <string name="fragment_affiliate_copy">Copy</string>
    <string name="fragment_affiliate_share">Share</string>
    <string name="fragment_create_wallet_create">Create</string>
    <string name="fragment_create_wallet_add_new_wallet">Add New Wallet</string>
    <string name="fragment_create_wallet_import_existing_wallet">import existing wallet</string>
    <string name="fragment_currency_title">Currency</string>
    <string name="fragment_currency_us_dollar">US Dollar</string>
    <string name="fragment_currency_euro">Euro</string>
    <string name="fragment_currency_eur">EUR</string>
    <string name="fragment_currency_usd">USD</string>
    <string name="fragment_password_title">Change password</string>
    <string name="fragment_password_stars">*******</string>
    <string name="fragment_password_new_password">New Password</string>
    <string name="fragment_password_change_password">Change Password</string>
    <string name="fragment_password_current_password">Current Password</string>
    <string name="fragment_register_have_an_account_question">Have an account?</string>
    <string name="fragment_send_token_continue">Continue</string>
    <string name="fragment_send_result_recipient_address">Recipient Address</string>
    <string name="fragment_send_result_transaction_hash">Transaction hash</string>
    <string name="fragment_send_result_done">Done</string>
    <string name="fragment_send_result_title">Successful transaction</string>
    <string name="fragment_send_result_share">share</string>
    <string name="fragment_send_result_amount">Amount</string>
    <string name="fragment_wallet_backup_hint">Write down or copy these 12 words in the right order and save them in a safe place</string>
    <string name="fragment_wallet_backup_warning">If you lose your recovery phrase, your wallet cannot be restored!</string>
    <string name="fragment_wallet_backup_create_eth_wallet">Create wallet</string>
    <string name="fragment_wallet_backup_your_recovery_phrase">Your Recovery Phrase</string>
    <string name="fragment_wallet_backup_have_stored_mnemonic">I have safely stored my recovery phrase offline</string>
    <string name="s_s">%s %s</string>
    <string name="wallet_menu_rename">\t Rename</string>
    <string name="wallet_menu_remove">\t Remove wallet</string>
    <string name="wallet_menu_mnemonic">\t Show mnemonic</string>
</resources>