<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/spacing_xxlarge"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_create_password_create_password"
        android:textAppearance="@style/textAppearance.size22.bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/fragment_create_password_this_password_will_unlock"
        android:textAppearance="@style/textAppearance.size16" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        android:textColorHint="@color/grey_text"
        app:passwordToggleContentDescription="@string/fragment_create_password_password"
        app:passwordToggleDrawable="@drawable/selector_show_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start"
            android:hint="@string/fragment_create_password_password"
            android:inputType="textPassword"
            android:textAlignment="inherit" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:textColorHint="@color/grey_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start"
            android:hint="@string/fragment_create_password_confirm_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:textAlignment="inherit" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_gravity="start"
        android:text="@string/fragment_create_password_must_be_at_least"
        android:textAppearance="@style/textAppearance.size14" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_active_touch_id"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textAppearance="@style/textAppearance.size16"
        android:text="@string/fragment_create_password_sign_in_touch_id"
       />

    <com.android.l2l.twolocal.view.CustomButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_huge"
        android:background="@drawable/selector_button_secondary_solid"
        android:text="@string/fragment_create_password_btn_create_password"
        android:textColor="@color/white" />

</LinearLayout>
